# smoke-signals

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  california_pm25_map.html  city_names.csv  city_names2.csv  graphs.ipynb  location_map.html  pyproject.toml  resolved_cities.csv
app/: app.py
app/assets/: styles.css
app/components/: nav_bar.py  time_series.py
app/modules/: data_loader.py  utils.py
app/pages/: analytics.py  home.py  proposal.py
data/processed/: locations-names.csv
docs/: mkdocs.yml
docs/docs/: index.md
ds_capstone/: __init__.py  dataset.py  features.py
notebooks/: 0-01-jvm-dataset-fire-wind-aligned.ipynb  0-01-jvm-training-pm25gnn.ipynb  3-01-jvm-train-pm25gnn.ipynb  3-02-jvm-train-ambient-pm25gnn.ipynb
pm25_forecasting_gnn/: config.yaml  config_ambient.yaml  config_exp1.yaml  dataset.py  graph.py  req.txt  train.py  train_ambient.py  util.py
pm25_forecasting_gnn/configs/: config_ambient.yaml
pm25_forecasting_gnn/model/: GC_LSTM.py  GRU.py  PM25_GNN.py  cells.py
smoke_signals/: app.py  time_series.py
smoke_signals/app/: Nav_bar.py  app.py  data_loader.py  utils.py
smoke_signals/app/pages/: analytics.py  home.py  proposal.py
smoke_signals/src/: corr_heatmap.py
smoke_signals/src/app/: app.yaml  requirements.txt
src/: corr_heatmap.py  observ_pred_scatterplot.py  time_series.py
src/app/: Nav_bar.py  app.py  requirements.txt
src/app/assets/: index.html  styles.css
src/app/pages/: analytics.py  home.py  proposal.py
src/ds_capstone/: plots.py
src/ds_capstone/modeling/: predict.py  train.py
