[project]
name = "smoke-signals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bresenham>=0.2.1",
    "dash>=3.0.3",
    "dash-bootstrap-components>=2.0.2",
    "dotenv>=0.9.9",
    "flask>=3.0.3",
    "geopy>=2.4.1",
    "google-cloud-storage>=3.1.0",
    "gunicorn>=23.0.0",
    "jupyterlab>=4.4.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "metpy>=1.6.3",
    "notebook>=7.4.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]
